@@ -153,5 +153,5 @@ def test_standalonedirective_children_validation():
     # test adding child
     with pytest.raises(GenerationError) as excinfo:
         cdir.addchild(schedule)
-    assert("Item 'Schedule' can't be child 0 of 'StandaloneDirective'. The "
-           "valid format is: 'None'." in str(excinfo.value))
+    assert ("Item 'Schedule' can't be child 0 of 'StandaloneDirective'. The "
+            "valid format is: 'None'." in str(excinfo.value))
